# demo

client/: pom.xml
client/src/main/java/com/example/client/: ClientApplication.java
client/src/main/resources/: application.properties  demo.tars  restful.tars
client/src/test/java/com/example/client/: ClientApplicationTests.java
day-1/tars-mq-server/: pom.xml
day-2/docker-app/tars/: docker-compose.yml
day-2/tars-mq-server/: Makefile  pom.xml
day-2/tars-mq-server/src/main/resources/: application.properties
day-3/goclient/: .gitignore  go.mod  main.go
day-3/mqwebservice/: Makefile  pom.xml
day-3/mqwebservice/src/main/resources/: application.properties  example.mqwebservice.config.conf
day-3/mqwebservice/src/main/resources/config/: dispose.properties
day-4/rsaserver/: Makefile  pom.xml
day-4/rsaserver/src/main/resources/: application.properties  example.rsaserver.config.conf
day-4/tars-mq-server/: pom.xml
day-4/tars-mq-server/src/main/resources/: application.properties  logback.xml.bak  mqserver.tars
day-5/dbserver/: pom.xml
day-5/dbserver/src/main/resources/: application.properties  application.yml
day-5/tars-mq-server/: Makefile  pom.xml  tars_start.sh
day-5/tars-mq-server/src/main/resources/: application.properties  example.mqserver.config.conf  mqserver.tars  rsaserver.tars
demo/: pom.xml
demo/src/main/java/com/example/demo/: DemoApplication.java  (+1 more)
demo/src/main/resources/: application.properties  demo.tars
docker-app/tars/: docker-compose.yml
goclient/: CMakeLists.txt  go.sum
goclient/tars-protocol/mqserver/: Message.tars.go
(+79 files in other folders)
